Expand admin quest management